--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -54,7 +54,8 @@ body {
             .img-sec {
                 position: relative;
                 .icon {
-                    
+                    position: absolute;
+                    top: -50%;
                 }
             }
         }
