--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -46,19 +46,61 @@ body {
     }
     .wrapper {
         overflow-x: hidden;
+        height: 100vh;
         .game-sec {
             position: relative;
             margin-top: 10%;
             left: 50%;
             transform: translateX(-10%);
+            #bg-img {
+                max-width: 100%;
+            }
             .img-sec {
-                position: relative;
+
                 .icon {
+                    background-color: #ffffff;
+               //     padding: 2%  ;
+                    padding: 30px 35px;
+                    border-radius: 50%;
+                    cursor: pointer;
+                }
+                .icon:hover {
+                    opacity: .7;
+                }
+                .paper {
                     position: absolute;
-                    top: -50%;
+                    top: -25%;
+                    left: -5%;
+                    border: 20px solid $paper-gradient;
+                }
+                .scissors {
+                    position: absolute;
+                    top: -25%;
+                    left: 15%;
+                    border: 20px solid $scissors-gradient;
+                }
+                .rock {
+                    position: absolute;
+                    top: 55%;
+                    left: 5%;
+                    border: 20px solid $rock-gradient;
                 }
             }
         }
-
+        .rule-sec {
+            position: relative;
+            .rule-btn {
+                padding: 10px 30px;
+                background-color: transparent;
+                border: 1px solid #ffffff;
+                color: #ffffff;
+                border-radius: 10px;
+                text-transform: uppercase;
+                letter-spacing: 1px;
+                cursor: pointer;
+                position: absolute;
+                left: 85%;
+            }
+        }
     }
 }
