--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -104,3 +104,89 @@ body {
         }
     }
 }
+.icon {
+    background-color: #ffffff;
+    padding: 30px 35px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.icon:hover {
+    opacity: .7;
+}
+.icon-paper {
+    border: 20px solid $paper-gradient;
+}
+.icon-scissors {
+    border: 20px solid $scissors-gradient;
+}
+.icon-rock {
+    border: 20px solid $rock-gradient;
+}
+
+.game-play-sec {
+    display: flex;
+    width: 50%;
+    margin: 5% 25% auto 25%;
+    justify-content: space-around;
+    .user-selected {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h1 {
+            margin-bottom: 25%;
+            color: #ffffff;
+            text-transform: uppercase;
+        }
+    }
+    .game-play-sec.active {
+        justify-content: space-between;
+    }
+    .decision-sec {
+        margin-top: 15%;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        h1 {
+            color: #ffffff;
+            font-size: 50px;
+            text-transform: uppercase;
+        }
+        .play-again-btn {
+            padding: 10px 50px;
+            background-color: #ffffff;
+            color: red;
+            border-radius: 5px;
+            border: none;
+            text-transform: uppercase;
+            margin-top: 5%;
+            cursor: pointer;
+        }
+        .play-again-btn:hover {
+            opacity: .7;
+        }
+    }
+    .decision-sec.active {
+        display: flex;
+    }
+    .system-selected {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        h1 {
+            margin-bottom: 18%;
+            color: #ffffff;
+            text-transform: uppercase;
+        }
+        .bg-circle {
+            padding: 30% ;
+            border-radius: 50%;
+            background-color: $header-outline;
+            position: absolute;
+            top: 35%;
+            z-index: -1;
+        }
+        
+        
+    }
+}
